# pio-ai

./: .env  .gitignore  README.md  package-lock.json  package.json
backend-pio-ai/: .env.example  .gitignore  TEST_CAMPOS_IA.md  alembic.ini  create_admin.py  main.py  pyproject.toml  pytest.ini  requirements.txt  test_db.py  test_resultado_ia_campos.py  vercel.json
backend-pio-ai/api/: index.py
backend-pio-ai/app/: main.py
backend-pio-ai/app/api/: alertas.py  auth.py  debug.py  imagenes.py  predict.py
backend-pio-ai/app/core/: database.py  deps.py  security.py
backend-pio-ai/app/models/: alertas.py  aves.py  imagenes.py  token_blacklist.py  users.py
backend-pio-ai/app/schemas/: alertas.py  aves.py  imagenes.py  token.py  users.py
backend-pio-ai/app/services/: alertas.py  auth.py  aves.py  ia_service.py  imagenes.py  users.py
backend-pio-ai/migrations/: env.py
backend-pio-ai/migrations/versions/: 2700da73ddfb_add_columns_to_resultados_ia_duracion_.py  348a041b3611_add_coordenadas_to_resultados_ia.py  8810d8886b18_create_feedback_ia_table.py
backend-pio-ai/tests/: conftest.py  test_api_alertas.py  test_api_auth.py  test_api_aves.py  test_api_imagenes.py  test_api_predict.py  test_core_security.py  test_services_alertas.py  test_services_auth.py  test_services_aves.py  test_services_ia_service.py  test_services_imagenes.py  test_services_users.py
frontend/: .env.example  package-lock.json  package.json
frontend/app/: error.tsx  globals.css  layout.tsx  loading.tsx  page.tsx
frontend/lib/: api.ts  ia-counts.ts  (+6 more)
lib/: migrate.js
models/: Usuario.js
(+33 files in other folders)
