[project]
name = "backend-pio-ai"
version = "0.1.2"
description = "Backend for Pio AI project"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "pydantic[email]",
    "python-dotenv",
    "passlib[bcrypt]",
    "email-validator",
    "python-multipart",
    "python-jose[cryptography]",
    "bcrypt==4.0.1"
]


[project.scripts]
app = "app.main:app"
